<resources>
    <string name="app_name">mRUPEE</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="title_activity_home_screen">HomeScreenActivity</string>
    <string name="title_activity_electricity__payment">Electricity_Payment</string>
    <string name="title_activity_loadwallet">LoadwalletActivity</string>
    <string name="title_activity_load_money">Load_moneyActivity</string>
    <string name="app_version">2.5.3</string>
    <string name="title_activity_fragment_tab__load__money">FragmentTab_Load_Money</string>
    <string-array name="spinner_arrays">
        <item>Ahmedabad</item>
        <item>Surat</item>
        <item>Rajkot</item>
        <item>Baroda</item>
        <item>Gandhinagar</item>
    </string-array>
    <string-array name="gender">
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string name="invalid_mobile">Please enter a Mobile Number</string>
    <string name="invalid_amount">Please enter the amount</string>
    <string name="invalid_date">Please enter valid date</string>
    <string name="invalid_mpin">Please enter the mPIN</string>
    <string name="invalid_subscriber_id">Please enter a Subscriber ID</string>
    <string name="invalid_dth_operator">Please select DTH operator</string>
    <string name="invalid_landline_operator">Please select Landline operator</string>
    <string name="invalid_state">Please select State</string>
    <string name="invalid_landline_number">Please enter STD Code &amp; Landline Number</string>
    <string name="invalid_request_number">You can not send a request to your own account</string>
    <string name="invalid_datacard_number">Please enter Data Card Number</string>
    <string name="invalid_datacard_operator">Please select Data Card operator</string>
    <string name="invalid_ca_number">Please enter Cutomer Account Number</string>
    <string name="invalid_service_provider">Please select Service Provider</string>
    <string name="invalid_merchant_name">Please enter Merchant Name</string>
    <string name="invalid_merchant_alternate_name">Please enter Alternate Name</string>
    <string name="invalid_email">Please enter Valid Email Id</string>
    <string name="invalid_merchant">Please enter Merchant or Merchant Mobile Number</string>
    <string name="invalid_merchant_type">Please select Merchant Type</string>
    <string name="invalid_mobile_number">Please enter Valid Number</string>
    <string name="invalid_city">Please select proper city</string>
    <string name="block1">You seem to have been using the app in more than two devices.Please select YES if you would want to send a request for approval for this device</string>
    <string name="block2">Your device is already associated with a number in our system. Please select YES if you would want to send a request to block this device</string>
    <string name="invalid_from">Please enter source city</string>
    <string name="invalid_to">Please enter destination city</string>
    <string name="invalid_source_destination">same source and destination</string>
    <string name="invalid_otp">Please enter Valid OTP</string>
    <string name="mandatory_field">Please enter Valid Mandatory Field</string>
    <string name="mandatory_field1">Please enter Last Transaction Amount or Date of Birth</string>
    <string name="mandatory_field2">Please enter Date of Birth</string>
    <string name="email_dob">Please enter Email Id or Date of Birth</string>
    <string name="last_trans">Please enter Last Transaction Amount</string>
    <string name="amount_prompt">Select Amount</string>
    <string name="title_activity_my_acount">MyAcount</string>
    <string name="title_activity_invite__friend_">Invite_Friend_Activity</string>
    <string name="title_activity_view__my__profile">View_My_Profile</string>
    <string name="title_activity_detact__mobile__number">Detact_Mobile_NumberActivity</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_activity_confirm_mobile">ConfirmMobileActivity</string>
    <string name="title_activity_change_mpin">ChangeMPINActivity</string>
    <string name="title_activity_quick_transfer">QuickTransferActivity</string>
    <string name="display_app_name">mRUPEE</string>
    <string name="new_user">Please register with mRupee to continue.</string>
    <string name="mother_maiden_name">Mother\'s Maiden Name</string>
    <string name="make_payment">\nDo you want to make Another Payment</string>
    <string name="make_transfer">\nDo you want to make Another Transfer?</string>
    <string name="no_network">We can\'t detect any internet connectivity.Please check your internet connection and try again.</string>
    <string name="valid_mobile">Please enter a valid mobile number</string>
    <string name="not_valid_user">Please register  with mRupee.</string>
    <string name="less50">Please enter less than 50 characters </string>
    <string name="apidown">We are experiencing some issues at the moment. Please try again later.</string>
    <string name="validation">Please enter valid values for processing payment.</string>
    <string name="invalid_ten_digit_mobile">Please enter a valid 10 digit Mobile Number</string>
    <string name="common_validation">Please enter valid values.</string>
    <string name="valid_name">Please enter valid Name.</string>
    <string name="valid_first_name">Please enter valid First Name.</string>
    <string name="valid_last_name">Please enter valid Last Name.</string>
    <string name="invalid_dob">Please select valid Date Of Birth.</string>
    <string name="invalid_document">Please select valid Document.</string>
    <string name="invalid_image">Please select Image.</string>
    <string name="invalid_front_image">Please choose Proof Of Address.</string>
    <string name="invalid_back_image">Please choose Proof Of Identity.</string>
    <string name="invalid_photo">Please choose Photo.</string>
    <string name="invalid_mother_name">Please enter Mother\'s Maiden Name</string>
    <string name="invalid_pincode">Please enter a valid Pincode.</string>
    <string name="invalid_age">Please enter a valid Age.</string>
    <string name="invalid_traveller">Please add a traveller.</string>
    <string name="terms_and_condition">Please agree to terms and conditions.</string>
    <string name="rate_title">Rate us</string>
    <string name="rate_explanation">If you enjoy using mRUPEE, please take a moment to rate us. It won’t take more than a minute. Thank you for your support!</string>
    <string name="rate_now">Rate Now</string>
    <string name="rate_later">Remind Later</string>
    <string name="rate_never">No,thanks</string>
    <string name="invalid_infant_count">Infant count cannot be greater than adult count</string>
    <string name="mpin">Please enter valid mPIN.</string>
    <string name="oldmpin">Please enter valid Old mPIN.</string>
    <string name="newmpin">Please enter valid New mPIN.</string>
    <string name="Confirmmpin">Please enter valid Confirm mPIN.</string>
    <string name="mpinnotmatching">MPIN is not matching</string>
    <string name="termsandcondition">Please agree to terms and conditions</string>
    <string name="invalidamount">Please enter valid amount</string>
    <string name="invalidamount1">Please enter valid amount</string>
    <string name="invalidmpin">Please enter valid mpin</string>
    <string name="validbeneficary">Please select beneficiary</string>
    <string name="beneficarynotfound">Please add beneficiary to continue</string>
    <string name="amount_limit">Please enter the amount in range 2 - 4</string>
    <string name="dth_amount">Please enter amount minimum 100 maximum 9999</string>
    <string name="billcycle_limit">Please enter the bill cycle in range 1 - 31</string>
    <string name="no_balance">You have Insufficient Balance in your wallet, Please load the wallet</string>
    <string name="upgrade"><u>Upgrade Your Wallet</u></string>
    <string name="notificationFlag">notificationFlag</string>
    <string name="notificationTitle">notificationHeading</string>
    <string name="notificationMessage">notificationMessage</string>
    <string name="hpcl_sub_list">1.Head to your nearest HPCL petrol pumps\n\n2.Open your mRUPEE app in your mobile\n\n3.Get the OTP using OTP icon at the top right of the home screen(OTP is valid for 4 hours)\n\n4.Enter your mobile number and OTP into the POS machine\n\n5.Transaction complete</string>
    <string name="ressy_list">1.Show this to the manager once you enter the restaurant\n\n2.Once you are done with your meal, click on the proceed button to pay\n\n3.Enter the discounted amount and your mPIN\n\n4.Transaction complete</string>
    <string name="getOperatorNew_url"> https://app.mrupee.in:8443/mRupeeServiceNew/getOperatorNew</string>
    <string name="getMobileBrowsePlan_url"> https://app.mrupee.in:8443/mRupeeServiceNew/getMobileBrowsePlan</string>
    <string name="updateGCMDetails"> https://app.mrupee.in:8443/mRupeeServiceNew/updateGCMDetails</string>
    <string name="getUserStatus"> https://app.mrupee.in:8443/mRupeeServiceNew/getUserStatus</string>
    <string name="billPayment"> https://app.mrupee.in:8443/mRupeeServiceNew/billPayment</string>
    <string name="quickPay"> https://app.mrupee.in:8443/mRupeeServiceNew/quickPay</string>
    <string name="wallettowallet"> https://app.mrupee.in:8443/mRupeeServiceNew/transferMoneyWallet2Wallet</string>
    <string name="register"> https://app.mrupee.in:8443/mRupeeServiceNew/userCreationNew</string>
    <string name="changempin"> https://app.mrupee.in:8443/mRupeeServiceNew/changeMPIN</string>
    <string name="billDeskConnect_old"> https://app.mrupee.in:8443/mRupeeServiceNew/billDeskConnectNew</string>
    <string name="billDeskConnect"> https://app.mrupee.in:8443/mRupeeServiceNew/billDeskConnectUpdate</string>
    <string name="addNewBankBeneficiary"> https://app.mrupee.in:8443/mRupeeServiceNew/addBankBeneficiary</string>
    <string name="getBeneficiary"> https://app.mrupee.in:8443/mRupeeServiceNew/getBeneficiary</string>
    <string name="transactionDetails"> https://app.mrupee.in:8443/mRupeeServiceNew/getAllTranscationDetail</string>
    <string name="transfertobank"> https://app.mrupee.in:8443/mRupeeServiceNew/transferWalletToBank</string>
    <string name="deleteBankBeneficiary"> https://app.mrupee.in:8443/mRupeeServiceNew/deleteBankBeneficiary</string>
    <string name="lastfivetransaction"> https://app.mrupee.in:8443/mRupeeServiceNew/getLast5Transaction</string>
    <string name="ministatement"> https://app.mrupee.in:8443/mRupeeServiceNew/getMiniStatement</string>
    <string name="account_statement"> https://app.mrupee.in:8443/mRupeeServiceNew/getTxnHistoryReport</string>
    <string name="addfavourites"> https://app.mrupee.in:8443/mRupeeServiceNew/addFavourite</string>
    <string name="getfavourites"> https://app.mrupee.in:8443/mRupeeServiceNew/getFavourite</string>
    <string name="delfavourites"> https://app.mrupee.in:8443/mRupeeServiceNew/deleteFavourite</string>
    <string name="checkVersion"> https://app.mrupee.in:8443/mRupeeServiceNew/checkVersion</string>
    <string name="loadMoneyMessage"> https://app.mrupee.in:8443/mRupeeServiceNew/loadMoneyMessageNew</string>
    <string name="CreditCardMessage"> https://app.mrupee.in:8443/mRupeeServiceNew/CreditCardMessage</string>
    <string name="getbanner"> https://app.mrupee.in:8443/mRupeeServiceNew/getBanner</string>
    <string name="button_proceed">Proceed</string>
    <string name="button_cancel">Cancel</string>
    <string name="login_with_otp">Login With OTP</string>
    <string name="termsconditions">  <![CDATA[Terms & Conditions]]></string>
    <string name="not_detected">Application could not detect\nthe mobile number\nPlease enter mobile number</string>
</resources>