<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/mainlinear"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splash"
    android:orientation="vertical">

    <ScrollView
        android:id="@+id/mainscrollview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/rounded_corner_layout_from_all_sides"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:paddingBottom="15dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="15dp">

                <LinearLayout
                    android:id="@+id/header_main"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/txtNotify"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/not_detected"
                        android:textColor="@color/blue"
                        android:textSize="@dimen/headding_text_size" />
                </LinearLayout>


                <LinearLayout

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/edittext"
                    android:orientation="horizontal">

                    <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@null"

                        android:enabled="false"
                        android:paddingBottom="5dp"
                        android:paddingLeft="5dp"
                        android:text="+91"
                        android:textColor="@color/black"
                        android:textSize="@dimen/normal_text_size" />

                    <EditText
                        android:id="@+id/edtMobileNumber"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@null"
                        android:hint="Enter 10 digit mobile number"
                        android:inputType="numberDecimal"
                        android:maxLength="10"
                        android:paddingBottom="5dp"
                        android:paddingLeft="5dp"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/normal_text_size" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/btn_margin_top"
                    android:orientation="vertical">

                    <ImageButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:adjustViewBounds="true"
                        android:background="#5c5478"
                        android:clickable="true"
                        android:onClick="callMobileConnect"
                        android:padding="5dp"
                        android:src="@drawable/mobile_connect" />



                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_gravity="center">

                        <CheckBox
                            android:id="@+id/checkMobileTerms"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:checked="true"/>

                        <TextView
                            android:id="@+id/txtTerms"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:clickable="true"
                            android:gravity="center"
                            android:onClick="openMobileConnectTerms"
                            android:text="@string/termsconditions"/>
                    </LinearLayout>



                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_top"
                        android:gravity="center"
                        android:text="---- OR ----"
                        android:textColor="@color/black"
                        android:textStyle="bold" />

                    <Button
                        android:id="@+id/btn_submit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_top"
                        android:background="@drawable/rounded_corner_login"
                        android:layout_gravity="center"
                        android:text="@string/login_with_otp"
                        android:textColor="@color/white"
                        android:textSize="@dimen/normal_text_size" />


                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>