<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linParent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context="com.tcs.mmpl.customer.Activity.RestaurantCouponActivity">

    <LinearLayout
        android:id="@+id/linHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="#e7e3e1"
        android:orientation="vertical">

        <include layout="@layout/listheader" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="5dp"
                android:paddingRight="30dp"
                android:paddingTop="5dp"
                android:text="How to use this coupon"
                android:textColor="@color/black"
                android:textSize="@dimen/normal_text_size" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@drawable/layout_box_light_grey"
                android:orientation="vertical"
                android:padding="10dp">


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingBottom="5dp"
                    android:paddingRight="30dp"
                    android:paddingTop="5dp"
                    android:lineSpacingExtra="5dp"
                    android:text="@string/ressy_list"
                    android:textColor="@color/black"
                    android:textSize="@dimen/small_text_size" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/list_view_box"
                android:orientation="vertical"
                android:padding="10dp">


                <TextView
                    android:id="@+id/txtHotelName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:gravity="center"
                    android:text=""
                    android:textColor="@color/black"

                    android:textSize="@dimen/normal_text_size" />

                <TextView
                    android:id="@+id/txtHotelAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:gravity="center"
                    android:text=""
                    android:textColor="@color/black"

                    android:textSize="@dimen/small_text_size" />

                <TextView
                    android:id="@+id/txtOffer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:gravity="center"
                    android:text=""
                    android:textColor="@color/black"

                    android:textSize="@dimen/normal_text_size" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:gravity="center"
                    android:text="Coupon expires on"
                    android:textColor="@color/black"

                    android:textSize="@dimen/small_text_size" />

                <TextView
                    android:id="@+id/txtExpiryDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:gravity="center"
                    android:text=" "
                    android:textColor="@color/black"

                    android:textSize="@dimen/small_text_size" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="15dp"
                    android:weightSum="3">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:layout_weight="1">

                        <View
                            android:layout_width="3dp"
                            android:layout_height="20dp"
                            android:background="@color/black" />
                        <View
                            android:layout_width="3dp"
                            android:layout_height="20dp"
                            android:layout_marginLeft="2dp"
                            android:background="@color/black" />
                        <View
                            android:layout_width="3dp"
                            android:layout_height="20dp"
                            android:layout_marginLeft="2dp"

                            android:background="@color/black" />
                        <View
                            android:layout_width="3dp"
                            android:layout_height="20dp"
                            android:layout_marginLeft="2dp"

                            android:background="@color/black" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center|top"
                        android:layout_weight="1"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginTop="5dp"
                            android:text="COUPON - "
                            android:visibility="gone"
                            android:textColor="@color/black"
                            android:textSize="@dimen/small_text_size" />

                        <TextView
                            android:id="@+id/txtCouponCode"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"

                            android:layout_marginTop="5dp"
                            android:text=""
                            android:textColor="@color/black"
                            android:textSize="@dimen/normal_text_size" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:layout_weight="1">

                        <View
                            android:layout_width="3dp"
                            android:layout_height="20dp"
                            android:background="@color/black" />
                        <View
                            android:layout_width="3dp"
                            android:layout_height="20dp"
                            android:layout_marginLeft="2dp"
                            android:background="@color/black" />
                        <View
                            android:layout_width="3dp"
                            android:layout_height="20dp"
                            android:layout_marginLeft="2dp"

                            android:background="@color/black" />
                        <View
                            android:layout_width="3dp"
                            android:layout_height="20dp"
                            android:layout_marginLeft="2dp"

                            android:background="@color/black" />
                    </LinearLayout>

                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:background="@drawable/list_view_box"
                    android:gravity="center"
                    android:padding="10dp"
                    android:layout_weight="1">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Powered by "
                        android:textSize="@dimen/normal_text_size"

                        android:textColor="@color/ressy_color"/>
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ressy"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text=" Ressy"
                        android:textSize="@dimen/normal_text_size"
                        android:textColor="@color/ressy_color"/>
                </LinearLayout>

            </LinearLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/rounded_corner"
                android:onClick="proceedOffer"
                android:text="@string/button_proceed"
                android:textColor="@color/white" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/rounded_corner"
                android:onClick="cancelOffer"
                android:text="@string/button_cancel"
                android:textColor="@color/white" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>
